Finished making bib

--- a/cs268.bib
+++ b/cs268.bib
@@ -27,3 +27,100 @@
   year={2010},
   publisher={IEEE}
 }
+
+@inproceedings{chiang2009fundamental,
+  title={Fundamental limits on secure clock synchronization and man-in-the-middle detection in fixed wireless networks},
+  author={Chiang, Jerry T and Haas, Jason J and Hu, Yih-Chun and Kumar, PR and Choi, Jihyuk},
+  booktitle={INFOCOM 2009, IEEE},
+  pages={1962--1970},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{freris2007fundamental,
+  title={Fundamental limits on synchronization of affine clocks in networks},
+  author={Freris, Nikolaos M and Kumar, PR},
+  booktitle={Decision and Control, 2007 46th IEEE Conference on},
+  pages={921--926},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{giridhar2006distributed,
+  title={Distributed clock synchronization over wireless networks: Algorithms and analysis},
+  author={Giridhar, Arvind and Kumar, PR},
+  booktitle={Decision and Control, 2006 45th IEEE Conference on},
+  pages={4915--4920},
+  year={2006},
+  organization={IEEE}
+}
+
+@article{freris2011fundamental,
+  title={Fundamental limits on synchronizing clocks over networks},
+  author={Freris, Nikolaos M and Graham, Scott R and Kumar, PR},
+  journal={Automatic Control, IEEE Transactions on},
+  volume={56},
+  number={6},
+  pages={1352--1364},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{lundelius1984upper,
+  title={An upper and lower bound for clock synchronization},
+  author={Lundelius, Jennifer and Lynch, Nancy},
+  journal={Information and control},
+  volume={62},
+  number={2},
+  pages={190--204},
+  year={1984},
+  publisher={Elsevier}
+}
+
+@incollection{giridhar2011spatial,
+  title={The spatial smoothing method of clock synchronization in wireless networks},
+  author={Giridhar, Arvind and Kumar, PR},
+  booktitle={Theoretical Aspects of Distributed Computing in Sensor Networks},
+  pages={227--256},
+  year={2011},
+  publisher={Springer}
+}
+
+@inproceedings{veitch2004robust,
+  title={Robust synchronization of software clocks across the internet},
+  author={Veitch, Darryl and Babu, Satish and P{\`a}sztor, Attila},
+  booktitle={Proceedings of the 4th ACM SIGCOMM conference on Internet measurement},
+  pages={219--232},
+  year={2004},
+  organization={ACM}
+}
+
+@inproceedings{graham2004time,
+  title={Time in general-purpose control systems: The control time protocol and an experimental evaluation},
+  author={Graham, Scott and Kumar, PR},
+  booktitle={Decision and Control, 2004. CDC. 43rd IEEE Conference on},
+  volume={4},
+  pages={4004--4009},
+  year={2004},
+  organization={IEEE}
+}
+
+@article{mills1991internet,
+  title={Internet time synchronization: the network time protocol},
+  author={Mills, David L},
+  journal={Communications, IEEE Transactions on},
+  volume={39},
+  number={10},
+  pages={1482--1493},
+  year={1991},
+  publisher={IEEE}
+}
+
+@incollection{elson2004global,
+  title={Global synchronization in sensornets},
+  author={Elson, Jeremy and Karp, Richard M and Papadimitriou, Christos H and Shenker, Scott},
+  booktitle={LATIN 2004: Theoretical Informatics},
+  pages={609--624},
+  year={2004},
+  publisher={Springer}
+}
