More files to bib

--- a/cs268.bib
+++ b/cs268.bib
@@ -124,3 +124,42 @@
   year={2004},
   publisher={Springer}
 }
+
+@inproceedings{swamy2015cooperative,
+  title={Cooperative communication for high-reliability low-latency wireless control},
+  author= "Vasuki {Narasimha Swamy} and Sahaana Suri and Paul Rigge and Matthew Weiner and Gireeja Ranade and and Anant Sahai and Borivoje Nikolić",
+  booktitle={Communications (ICC), 2015 IEEE International Conference on},
+  pages={4380--4386},
+  year={2015},
+  organization={IEEE}
+}
+
+@INPROCEEDINGS{swamy2016cooperative,
+AUTHOR="Vasuki {Narasimha Swamy} and Paul Rigge and Gireeja Ranade and Anant Sahai
+and Borivoje Nikolić",
+TITLE="Network Coding for {High-Reliability} {Low-Latency} Wireless Control",
+BOOKTITLE="2016 IEEE Wireless Communications and Networking Conference WS 6 : IEEE
+WCNC'2016 Workshop on 5G \& Vertical Industry (IEEEWCNC2016-5G\&VI)",
+ADDRESS="Doha, Qatar",
+DAYS=3,
+MONTH=apr,
+YEAR=2016,
+KEYWORDS="Cooperative communication; network coding; low- latency; high-reliability
+wireless; industrial control; diversity; Internet of Things",
+ABSTRACT="The Internet of Things (IoT) envisions simultaneous sensing and actuation
+of numerous wirelessly connected devices. Emerging human-in-the-loop
+applications demand low- latency high-reliability communication protocols,
+paralleling the requirements for high-performance industrial control. This
+paper introduces a wireless communication protocol based on network coding
+that in conjunction with cooperative communication techniques builds the
+necessary diversity to achieve the target reliability. The proposed
+protocol, XOR-CoW, is analyzed by using a communication theoretic
+delay-limited-capacity frame- work and compared to different realizations
+of previously pro- posed protocols without network coding. The results show
+that as the network size or payload increases, XOR-CoW gains advantage in
+minimum SNR to achieve the target latency. For a scenario inspired by an
+industrial printing application with 30 nodes in the control loop, total
+information throughput of 4.8 Mb/s, 20MHz of bandwidth and cycle time under
+2 ms, the protocol can robustly achieve a system probability of error
+better than 10−9 with a nominal SNR less than 2 dB with Rayleigh fading."
+}
