Adding another line to motivation

--- a/proposal.tex
+++ b/proposal.tex
@@ -28,7 +28,7 @@ An existing domain which parallels these requirements is high performance indust
 As no existing wireless technology can support these requirements, wired communication protocols (Fieldbus) are used.
 They support short messages (10s of bytes) to/from closeby sensor/actuators (10s -100s) delivered regularly (100s - 1000s of times per second). The protocols are ultra-reliable (probability of a single packet delivery failure of $10^{-8}$) with very low latency (a couple of ms).
 Synchronized cooperative communication based wireless protocols proposed in \cite{swamy2015cooperative, swamy2016cooperative} achieves QoS (high-reliability and low latency) similar to wired fieldbus systems by exploiting multi-user diversity and distributed space-time coding to achieve.
-One of the main requirements for protocols aiming at high-performance IoT applications is tightly synchronized clocks. We aim to address this problem in our project.
+One of the main requirements for protocols aiming at high-performance IoT applications is tightly synchronized clocks to avoid collision and thus avoiding any decoding errors which lead to violation of latency requirements. We aim to address this problem in our project.
 
 The goal of this project is development and analysis of protocols to achieve clock synchronization in a wireless network while tolerating a small (predefined) amount of error.
 We model the time at each node $n$ ($T_n$) to have two components: the time from the oscillator ($T_{n,o}$) and the correction time ($T_{n,c}$) such that $T_n = T_{n,o} + T_{n,c}$. We call $T_n$ to be the virtual clock time of node $n$. We want the virtual clock time differences between any two nodes $m$ and $n$ to be within a tolerable limit say $T_{\epsilon}$ i.e., $|T_m - T_n| \leq T_{\epsilon}$. The target $T_{\epsilon}$ is in the order of 100ns.
