--- a/cs268.bib
+++ b/cs268.bib
@@ -5,7 +5,7 @@
 @IEEEtranBSTCTL{BIBcontrol,
 
   CTLuse_forced_etal = "yes",
-  CTLmax_names_forced_etal = "1",
+  CTLmax_names_forced_etal = "2",
   CTLnames_show_etal = "1",
 }
   CTLuse_article_number = "yes",
@@ -23,36 +23,28 @@
   journal={Proceedings of the IEEE},
   volume={98},
   number={11},
-  pages={1828--1846},
-  year={2010},
-  publisher={IEEE}
+  year={2010}
 }
 
 @inproceedings{chiang2009fundamental,
   title={Fundamental limits on secure clock synchronization and man-in-the-middle detection in fixed wireless networks},
   author={Chiang, Jerry T and Haas, Jason J and Hu, Yih-Chun and Kumar, PR and Choi, Jihyuk},
-  booktitle={INFOCOM 2009, IEEE},
-  pages={1962--1970},
-  year={2009},
-  organization={IEEE}
+  booktitle={IEEE INFOCOM 2009},
+  year={2009}
 }
 
 @inproceedings{freris2007fundamental,
   title={Fundamental limits on synchronization of affine clocks in networks},
   author={Freris, Nikolaos M and Kumar, PR},
-  booktitle={Decision and Control, 2007 46th IEEE Conference on},
-  pages={921--926},
-  year={2007},
-  organization={IEEE}
+  booktitle={46th IEEE Conference on Decision and Control},
+  year={2007}
 }
 
 @inproceedings{giridhar2006distributed,
   title={Distributed clock synchronization over wireless networks: Algorithms and analysis},
   author={Giridhar, Arvind and Kumar, PR},
-  booktitle={Decision and Control, 2006 45th IEEE Conference on},
-  pages={4915--4920},
-  year={2006},
-  organization={IEEE}
+  booktitle={2006 45th IEEE Conference on Decision and Control},
+  year={2006}
 }
 
 @article{freris2011fundamental,
@@ -61,9 +53,7 @@
   journal={Automatic Control, IEEE Transactions on},
   volume={56},
   number={6},
-  pages={1352--1364},
-  year={2011},
-  publisher={IEEE}
+  year={2011}
 }
 
 @article{lundelius1984upper,
@@ -72,94 +62,67 @@
   journal={Information and control},
   volume={62},
   number={2},
-  pages={190--204},
-  year={1984},
-  publisher={Elsevier}
+  year={1984}
 }
 
 @incollection{giridhar2011spatial,
   title={The spatial smoothing method of clock synchronization in wireless networks},
   author={Giridhar, Arvind and Kumar, PR},
   booktitle={Theoretical Aspects of Distributed Computing in Sensor Networks},
-  pages={227--256},
-  year={2011},
-  publisher={Springer}
+  year={2011}
 }
 
 @inproceedings{veitch2004robust,
   title={Robust synchronization of software clocks across the internet},
   author={Veitch, Darryl and Babu, Satish and P{\`a}sztor, Attila},
   booktitle={Proceedings of the 4th ACM SIGCOMM conference on Internet measurement},
-  pages={219--232},
-  year={2004},
-  organization={ACM}
+  year={2004}
 }
 
 @inproceedings{graham2004time,
   title={Time in general-purpose control systems: The control time protocol and an experimental evaluation},
   author={Graham, Scott and Kumar, PR},
-  booktitle={Decision and Control, 2004. CDC. 43rd IEEE Conference on},
-  volume={4},
-  pages={4004--4009},
-  year={2004},
-  organization={IEEE}
+  booktitle={43rd IEEE Conference on Decision and Control, 2004. CDC.},
+  volume={4}
 }
 
 @article{mills1991internet,
   title={Internet time synchronization: the network time protocol},
   author={Mills, David L},
-  journal={Communications, IEEE Transactions on},
+  journal={IEEE Transactions on Communications},
   volume={39},
   number={10},
-  pages={1482--1493},
-  year={1991},
-  publisher={IEEE}
+  year={1991}
 }
 
 @incollection{elson2004global,
   title={Global synchronization in sensornets},
   author={Elson, Jeremy and Karp, Richard M and Papadimitriou, Christos H and Shenker, Scott},
   booktitle={LATIN 2004: Theoretical Informatics},
-  pages={609--624},
-  year={2004},
-  publisher={Springer}
+  year={2004}
 }
-
+@article{elson2002fine,
+  title={Fine-grained network time synchronization using reference broadcasts},
+  author={Elson, Jeremy and Girod, Lewis and Estrin, Deborah},
+  journal={ACM SIGOPS Operating Systems Review},
+  volume={36},
+  number={SI},
+  year={2002}
+}
 @inproceedings{swamy2015cooperative,
   title={Cooperative communication for high-reliability low-latency wireless control},
-  author= "Vasuki {Narasimha Swamy} and Sahaana Suri and Paul Rigge and Matthew Weiner and Gireeja Ranade and and Anant Sahai and Borivoje Nikolić",
-  booktitle={Communications (ICC), 2015 IEEE International Conference on},
-  pages={4380--4386},
-  year={2015},
-  organization={IEEE}
+  author= "Vasuki {Narasimha Swamy} and Sahaana Suri and Paul Rigge and Matthew Weiner and Gireeja Ranade and Anant Sahai and Borivoje Nikolić",
+  booktitle={IEEE International Conference on Communications (ICC)},
+  year={2015}
 }
 
 @INPROCEEDINGS{swamy2016cooperative,
 AUTHOR="Vasuki {Narasimha Swamy} and Paul Rigge and Gireeja Ranade and Anant Sahai
 and Borivoje Nikolić",
 TITLE="Network Coding for {High-Reliability} {Low-Latency} Wireless Control",
-BOOKTITLE="2016 IEEE Wireless Communications and Networking Conference WS 6 : IEEE
-WCNC'2016 Workshop on 5G \& Vertical Industry (IEEEWCNC2016-5G\&VI)",
+BOOKTITLE="IEEE Wireless Communications and Networking Conference: Workshop on 5G \& Vertical Industry",
 ADDRESS="Doha, Qatar",
 DAYS=3,
 MONTH=apr,
 YEAR=2016,
-KEYWORDS="Cooperative communication; network coding; low- latency; high-reliability
-wireless; industrial control; diversity; Internet of Things",
-ABSTRACT="The Internet of Things (IoT) envisions simultaneous sensing and actuation
-of numerous wirelessly connected devices. Emerging human-in-the-loop
-applications demand low- latency high-reliability communication protocols,
-paralleling the requirements for high-performance industrial control. This
-paper introduces a wireless communication protocol based on network coding
-that in conjunction with cooperative communication techniques builds the
-necessary diversity to achieve the target reliability. The proposed
-protocol, XOR-CoW, is analyzed by using a communication theoretic
-delay-limited-capacity frame- work and compared to different realizations
-of previously pro- posed protocols without network coding. The results show
-that as the network size or payload increases, XOR-CoW gains advantage in
-minimum SNR to achieve the target latency. For a scenario inspired by an
-industrial printing application with 30 nodes in the control loop, total
-information throughput of 4.8 Mb/s, 20MHz of bandwidth and cycle time under
-2 ms, the protocol can robustly achieve a system probability of error
-better than 10−9 with a nominal SNR less than 2 dB with Rayleigh fading."
 }
