Changed tex file

--- a/Writeup/cs268.bib
+++ b/Writeup/cs268.bib
@@ -163,3 +163,12 @@ YEAR=2016,
   volume={2},
   year={2002}
 }
+
+@book{Tse:2005:FWC:1111206,
+ author = {Tse, David and Viswanath, Pramod},
+ title = {Fundamentals of Wireless Communication},
+ year = {2005},
+ isbn = {0-5218-4527-0},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+}
