--- a/Writeup/report.tex
+++ b/Writeup/report.tex
@@ -53,14 +53,14 @@ They support short messages (10s of bytes) to/from closeby sensors/actuators (10
 Synchronized cooperative communication based wireless protocols proposed in \cite{swamy2015cooperative, swamy2016cooperative} achieves QoS (high-reliability and low latency) similar to wired fieldbus systems by exploiting multi-user diversity and distributed space-time coding to achieve.
 One of the main requirements for protocols aiming at high-performance IoT applications is tightly synchronized clocks to avoid collision and thus avoiding any decoding errors which lead to violation of latency requirements.
 
-To understand the kind of tight synchronization required we do the following back of the envelope calculations. Consider the ``Occupy CoW'' protocol described in \cite{swamy2015cooperative}. Each downlink and uplink messages are flooded into the network and all the nodes which can aid the origin node in getting the packet through to the destination help at the same time by the means of a distributed space time code (DSTC) - either a deterministic one like Alamouti \cite{alamouti1998simple}, or a random one like a random linear combination of possible codewords \cite{sirkeci2007randomized} or something even more simpler like delay diversity \cite{bossert2002cyclic}. The main objective of any DSTC is to enable full diversity. Thus each message gets two chances to reach the destination. If there are $25$ nodes in the network and the total time available is $2$ms, then the uplink packets get approximately $20 \mu$s. To ensure that uplink messages are decodable and everything happens in a timely fashion, the clocks need to be synchronized upto to a precision of $100$ns. The reason we can tolerate errors up to $100$ns is because an OFDM-like technique is employed can compensate for such offsets.
+To understand the kind of tight synchronization required we do the following back of the envelope calculations. Consider the ``Occupy CoW'' protocol described in \cite{swamy2015cooperative}. Each downlink and uplink messages are flooded into the network and all the nodes which can aid the origin node in getting the packet through to the destination help at the same time by the means of a distributed space time code (DSTC) - either a deterministic one like Alamouti \cite{alamouti1998simple}, or a random one like a random linear combination of possible codewords \cite{sirkeci2007randomized} or something even more simpler like delay diversity \cite{bossert2002cyclic}. The main objective of any DSTC is to enable full diversity. Thus each message gets two chances to reach the destination. If there are $25$ nodes in the network and the total time available is $2$ms, then the uplink packets get approximately $20 \mu$s. To ensure that uplink messages are decodable and everything happens in a timely fashion, the clocks need to be synchronized up to to a precision of $100$ns. The reason we can tolerate errors up to $100$ns is because an OFDM-like technique is employed can compensate for such offsets.
 
 We studied some of the commonly used techniques for clock synchronization.
 GPS clocks have great accuracy --- about $40 ns$. But there are two main reasons for why GPS clocks are not useful for our applications: (a) they work only outdoors (b) they have a very high convergence time.
 The Internet generally synchronizes in a hierarchical fashion based on the seminal work of Mills ``Network Time Protocol''(NTP) \cite{mills1991internet}.
 The offsets achieved by this protocol is in the order of hundreds of milliseconds and is clearly not good enough for us.
 Reference broadcast based protocols \cite{elson2004global, elson2002fine} are a significant improvement over NTP as the offsets are in the order of microseconds and also deal well with skews (difference of clock frequencies).
-Thus none of these already established methods were good enough for our application which requires accuracy in the order of $100 ns$. So we explored some simple methods inspired by these existing application. Section \ref{sec:clock} presents different clock models, section \ref{sec:setup} describes the problem in detail, section \ref{sec:methods} describes the methods explored for synchronization and \ref{sec:results} present the results.
+Thus none of these already established methods were good enough for our application which requires accuracy in the order of $100 ns$. So we explored some simple methods inspired by these existing application. Section \ref{sec:clock} presents different clock models, section \ref{sec:setup} describes the problem in detail, section \ref{sec:methods} describes the methods explored for synchronization and section \ref{sec:results} present the results.
 
 \section{How do clocks work?}
 \label{sec:clock}
@@ -84,7 +84,7 @@ In order to develop a synchronization protocol, we need to first understand the 
 
 But these are ideal clocks. Most clocks are marked to tick at a frequency $F_c$ but they do not necessarily tick at that rate. The error in the actual ticking frequency of a `moderately good' clock is about $300$ ppm (parts per million). Thus if we are looking at a clock which is marked to tick at $10$GHz and if off by $300$ ppm, then it would be actually ticking at $10$ + $10 \times 300 \times 10^{-6}$ GHz which is $10.003$ GHz. While an ideal clock would report that $1$ second is $1$ second, the fast clock would report that the elapsed time is $1$ second and $30$ microseconds instead of $1$ second. The deviation from the ideal ticking rate is called the `skew' (denoted by $\alpha$) and this is the ratio between actual ticking rate and ideal ticking rate. Thus a clock $C(t)$ can be modeled as $C(t) = \alpha t + \beta$ where $t$ is the time at the ideal clock, $\alpha$ is the skew and $\beta$ is some initial offset.
 
-What we described above is still a bit ideal. Why? We've completely ignored any environmental factors (like temperature, humidity, pressure) that might affect the oscillator's ticking rate \cite{frerking2012crystal}. These are important factors to be considered and actual oscillators behave differently. If the ideal frequency of oscillation is $F_c$ (leading to a period of $T_c$) then each period of oscillation in reality is $T_c + \delta$ where $\delta$ can be modeled as a Gaussian random variable \& this is called the jitter. This is illustrated in Fig.~\ref{fig:clock_real}. How high is the jitter going to be in one cycle? Typically, the standard deviation of $\delta$ is $50$ppm of $T_c$. In $1$ms, the number of cycles recorded by a $10$GHz oscillator ($T_c = 100$ps is $10 \times 10^{9} \times 10{-3} = 10^{7}$. Thus, if the standard deviation per cycle is $50$ppm of $100$ps, the standard deviation time taken to register $1$ms is $\left(\sqrt{10^7} \times 100 \times 50 \times 10^{-6}\right)$ps which is approximately $158$ps. This essentially means that the time needed to record $1$ms is a Gaussian random variable centered at $1$ms with a variance os $158$ps.
+What we described above is still a bit ideal. Why? We've completely ignored any environmental factors (like temperature, humidity, pressure) that might affect the oscillator's ticking rate \cite{frerking2012crystal}. These are important factors to be considered and actual oscillators behave differently. If the ideal frequency of oscillation is $F_c$ (leading to a period of $T_c$) then each period of oscillation in reality is $T_c + \delta$ where $\delta$ can be modeled as a Gaussian random variable \& this is called the jitter. This is illustrated in Fig.~\ref{fig:clock_real}. How high is the jitter going to be in one cycle? Typically, the standard deviation of $\delta$ is $50$ppm of $T_c$. In $1$ms, the number of cycles recorded by a $10$GHz oscillator ($T_c = 100$ps is $10 \times 10^{9} \times 10^{-3} = 10^{7}$. Thus, if the standard deviation per cycle is $50$ppm of $100$ps, the standard deviation time taken to register $1$ms is $\left(\sqrt{10^7} \times 100 \times 50 \times 10^{-6}\right)$ps which is approximately $158$ps. This essentially means that the time needed to record $1$ms is a Gaussian random variable centered at $1$ms with a variance of $158$ps.
 
 \section{Network Setup}
 \label{sec:setup}
@@ -101,7 +101,7 @@ We consider a network with a central controller ($C$) that wishes to send and re
 
 The Occupy CoW protocol described in \cite{swamy2015cooperative} uses multi-user diversity to overcome bad fading events. The basic idea is to use a flooding strategy where the controller broadcasts a packet that includes messages for all clients. As this is a broadcast message, the intended set of recipients are all clients. Clients with good channels act as relays for other clients. This is done in a carefully scheduled, phased manner with dedicated time slots for each client to talk.
 
-We first consider an aggressive synchronization protocol for the intial ideal clock model (where there is no jitter). As the applications we envision are mostly indoors (else we could just use GPS), most of the clients are in each other's range. We first consider a multiple beaconing reference clock model where there are several dedicated clock nodes say on the ceiling of each room which serve as reference clocks. These reference clocks are all connected by a wire so that they have the same reference time $t$.
+We first consider an aggressive synchronization protocol for the initial ideal clock model (where there is no jitter). As the applications we envision are mostly indoors (else we could just use GPS), most of the clients are in each other's range. We first consider a multiple beaconing reference clock model where there are several dedicated clock nodes say on the ceiling of each room which serve as reference clocks. These reference clocks are all connected by a wire so that they have the same reference time $t$.
 The clocks in the $N$ clients are essentially marked to be ticking at the same rate as the reference clock but due to the imperfect nature of clocks, each client clock has a skew $\alpha_i$.
 The time of client $i$ at time $t$ of the reference clock is $C_i(t) = \alpha_ i t + \beta_i$ where $\alpha_i$ is the skew and $\beta_i$ is the initial offset. Clients will listen to the messages of the closest reference clock. Figure \ref{fig:clock_model} shows the model with reference clocks and clients where $d_i(t)$ is the distance of client $i$ from the nearest reference clock at time $t$.
 
@@ -252,7 +252,7 @@ If a longer time interval like $10$ms is used, the accuracy of the estimated tim
 \label{fig:results2}
 \end{figure}
 
-Does the `value' of the skew affect the performance of the synchronization method? To learn that, we performed another simulated experiment where the synchronization was allowed to run for $100$ seconds for all values of skews ranging from $\left(1 - 300\times 10^{-6}, 1 + 300 \times 10^{-6}\right)$ and we calculated the long term average error in the virtual clock and reference clock time. For the ideal clock model with constant skew and synchronization interval of $1$ms, the performance is depicted in figure~\ref{fig:ideal_1ms}.
+Does the `value' of the skew affect the performance of the synchronization method? To learn that, we performed another simulated experiment where the synchronization was allowed to run for $50$ seconds for all values of skews ranging from $\left(1 - 300\times 10^{-6}, 1 + 300 \times 10^{-6}\right)$ and we calculated the long term average error in the virtual clock and reference clock time. For the ideal clock model with constant skew and synchronization interval of $1$ms, the performance is depicted in figure~\ref{fig:ideal_1ms}.
 
 \begin{figure}[h]
 \begin{subfigure}[b]{0.48\textwidth}
@@ -291,7 +291,7 @@ We see that again the performance is well within the target! Our next step was t
 \begin{enumerate}
 \item Advancements in electronics has made cheap but good clocks and as we considered `good' clocks in our work (not atomic clocks but still good), we get good performance.
 \item The nodes are most of the time in talking range with each other as the applications being considered are indoors. The biggest factor is comes from the fact that we eliminate the `critical' path effect mentioned in \cite{elson2002fine} by actually minimizing it by considering an indoor environment.
-\item A huge difference between wireless sensor networks (WSN) and the applications we consider are energy requirements. Nodes in WSN cannot afford to stay up all the time and be in promiscuous listening mode but the applications we target can (and infact have to as shown in \cite{swamy2015cooperative}). This is a big contributor to this simple scheme having a good performance.
+\item A huge difference between wireless sensor networks (WSN) and the applications we consider are energy requirements. Nodes in WSN cannot afford to stay up all the time and be in promiscuous listening mode but the applications we target can (and in fact have to as shown in \cite{swamy2015cooperative}). This is a big contributor to this simple scheme having a good performance.
 \end{enumerate}
 
 This concludes our theoretical analyses of the synchronization protocols for high-performance IoT applications. The implementation of this scheme will be done on software defined radios over the summer and Fall semester!
